# Cloud-Native-AI

./: .gitignore  GITHUB_SETUP.md  README.md  amplify.yml  devtools  hello.py  lab1.py
car-cloud/: .gitignore  README.md
car-cloud/backend/: .env.example  requirements.txt
car-cloud/backend/app/: __init__.py  config.py  main.py
car-cloud/frontend/: next.config.ts  package-lock.json  package.json
car-cloud/frontend/src/app/: globals.css  layout.tsx  page.tsx
car-cloud/frontend/src/app/car-api/[[...path]]/: route.ts
car-cloud/frontend/src/lib/: api.ts
devtools/: devtools.py  devtools.script  lab1-questions.txt  lab1.py
lab2/: lab2-questions.txt
lab3/app/: openrouter_client.py
lab6-docker/: agents.md  lab6-compose-answers.txt
lab6-docker/backend/: .dockerignore  Dockerfile
lab6-docker/frontend/: .dockerignore  Dockerfile
lab7-database/: ai-model.md  docker-compose.yml
lab7-database/backend/: pyproject.toml
lab7-database/backend/app/: config.py  db.py  main.py  models.py
lab7-database/backend/sql/: schema.sql
lab7-database/frontend/app/: layout.tsx  page.tsx
lab7-database/frontend/app/api/summarize/: route.ts
lab7-database/frontend/lib/: summarizeBackend.ts
